--- a/kdd/templates/kdd/dashboard_view.html
+++ b/kdd/templates/kdd/dashboard_view.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Knowing Customer</title>
+    <title>Knowing Customer (KDD Cup 2009) - Machine Learning Project by Mahesh Rajput</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" />
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
     <link href="{% static 'fontawesome/css/all.min.css' %}" rel="stylesheet" />
@@ -25,10 +25,9 @@
             <div class="tm-row pt-4">
                 <div class="tm-col-left">
                     <div class="tm-site-header media">
-                        <!-- <i class="fas fa-umbrella-beach fa-3x mt-1 tm-logo"></i> -->
                         <div class="media-body">
                             <h1 class="tm-sitename text-uppercase">Knowing</h1>
-                            <p class="tm-slogon">Customer KDD Cup 2009</p>
+                            <p class="tm-slogon">Customer (KDD Cup 2009)</p>
                         </div>
                     </div>
                 </div>
@@ -59,6 +58,7 @@
                 </div>
             </div>
 
+            <!--  Begin main body content -->
             <div class="tm-row">
                 <div class="tm-col-left"></div>
                 <main class="tm-col-right">
@@ -69,15 +69,15 @@
                           <p class="mb-5">
                             <input type="number" class="form-control" placeholder="Number from 0 to 200" name=3>
                             <select name="147" class="form-control">
-                              <option value="volvo">bZkvyxLkBI</option>
-                              <option value="saab">CEat0G8rTN</option>
-                              <option value="fiat">2jiWq69cTy</option>
-                              <option value="audi">NESt0G8EIb</option>
+                              <option value="bZkvyxLkBI">bZkvyxLkBI</option>
+                              <option value="CEat0G8rTN">CEat0G8rTN</option>
+                              <option value="2jiWq69cTy">2jiWq69cTy</option>
+                              <option value="NESt0G8EIb">NESt0G8EIb</option>
                             </select>
                             <select name="183" class="form-control">
-                              <option value="volvo">RO12</option>
-                              <option value="saab">AERks4l</option>
-                              <option value="fiat">2Knk1KF</option>
+                              <option value="RO12">RO12</option>
+                              <option value="AERks4l">AERks4l</option>
+                              <option value="2Knk1KF">2Knk1KF</option>
                             </select>
                           </p>
                         </div>
@@ -97,14 +97,14 @@
                     </section>
                 </main>
             </div>
+            <!--  End main body content -->
+
         </div>
 
+        <!-- Footer -->
         <div class="tm-row">
             <div class="tm-col-left text-center">
                 <ul class="tm-bg-controls-wrapper">
-                    <!-- <li class="tm-bg-control active" data-id="0"></li>
-                    <li class="tm-bg-control" data-id="1"></li>
-                    <li class="tm-bg-control" data-id="2"></li> -->
                 </ul>
             </div>
             <div class="tm-col-right tm-col-footer">
@@ -113,12 +113,14 @@
                 </footer>
             </div>
         </div>
+        <!-- End footer -->
 
         <div class="tm-bg">
             <div class="tm-bg-left"></div>
             <div class="tm-bg-right"></div>
         </div>
     </div>
+
     <script>
     var ajax = new XMLHttpRequest();
     var churn_class, churn_prob;
