Added menu links

--- a/kdd/templates/kdd/dashboard_view.html
+++ b/kdd/templates/kdd/dashboard_view.html
@@ -44,13 +44,13 @@
                                     <a class="nav-link tm-nav-link" href="#">Projects <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="#">Blog</a>
+                                    <a class="nav-link tm-nav-link" href="https://medium.com/@mrmaheshrajput/building-knowledge-on-customer-through-machine-learning-2785b344749f" target="_blank">Blog</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="#">Github</a>
+                                    <a class="nav-link tm-nav-link" href="https://github.com/mrmaheshrajput/kdd2009" target="_blank">Github</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="#">LinkedIn</a>
+                                    <a class="nav-link tm-nav-link" href="https://www.linkedin.com/in/maheshrajput/" target="_blank">LinkedIn</a>
                                 </li>
                             </ul>
                         </div>
