--- a/dashboard/templates/dashboard/dashboard_view.html
+++ b/dashboard/templates/dashboard/dashboard_view.html
@@ -86,7 +86,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p>Currently actively looking for Machine Learning and Deep Learning based roles in Gurgaon and Delhi.</p>
+									<p>Actively looking for Machine Learning and Deep Learning based roles in Gurgaon and Delhi.</p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-1-5">
